<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="app_logoText">Калькулятор</string>
    <string name="app_surname">MyFirstApplication</string>
    <string name="inputFirstNumber">Ввведите первое число</string>
    <string name="inputSecondNumber">Ввведите второе число</string>
    <string name="buttonSum">+</string>
    <string name="resultOfSum"> </string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="plus">+</string>
    <string name="minus">−</string> <!-- длинное тире для минуса -->
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equals">=</string>
    <string name="percent">%</string>

    <string name="dot">.</string>
    <string name="delete">AC</string>

</resources>