<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AFAFAF"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="201dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:fontFamily="monospace"
        android:text="@string/app_logoText"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textFontWeight="900"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNumberFieldInput"
        android:layout_width="322dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/inputFirstNumber"


        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/secondNumberFieldInput"
        android:layout_width="307dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:ems="10"


        android:hint="@string/inputSecondNumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonOfAddition"
        android:layout_width="127dp"
        android:layout_height="61dp"
        android:layout_marginTop="112dp"
        android:text="@string/buttonSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/secondNumberFieldInput" />

    <TextView
        android:id="@+id/resultOfAddition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/resultOfSum"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@+id/buttonOfAddition"
        tools:layout_editor_absoluteX="126dp" />

</androidx.constraintlayout.widget.ConstraintLayout>